[package]
name = "solana-noreplay-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
litesvm = "0.6"
solana-sdk = "2.2"
proptest = "1.6"

[dev-dependencies]
mollusk-svm = { version = "0.10.1", features = ["all-builtins"] }
mollusk-svm-bencher = "0.10.1"
solana-account = "3.3"
solana-instruction = "3.1"
solana-pubkey = "3.0"

[[bench]]
name = "compute_units"
harness = false

